--- a/src/content/blog/2022-03-25-narrator.md
+++ b/src/content/blog/2022-03-25-narrator.md
@@ -1,6 +1,7 @@
 ---
 title: How do I design for screen readers?
-publishDate: 2022-03-25
+publishDate: 2023-03-25
+slug: design_for_screen_readers
 ---
 
 Here's what I think about when I design for screen readers like Narrator.
