--- a/src/content/blog/2023-03-25-narrator-context.mdx
+++ b/src/content/blog/2023-03-25-narrator-context.mdx
@@ -13,9 +13,12 @@ Well, if you're a visual user:
 * You probably read the article title
 * You can glance at the URL bar to get 
 
-<Playground html={`<h1>Assignments</h1>
+<Playground client:load html={`<h1>Assignments</h1>
 <ol>
-    <button>Publish</button>
-    <button>Edit</button>
-    <button>Delete</button>
+    <li>
+        All Things Great and Small - book report
+        <button>Publish</button>
+        <button>Edit</button>
+        <button>Delete</button>
+    </li>
 </ol>`} />
