--- a/src/content/blog/2023-03-25-narrator-context.mdx
+++ b/src/content/blog/2023-03-25-narrator-context.mdx
@@ -11,41 +11,14 @@ You are reading an article called **Context - the most confusing thing about scr
 Well, if you're a visual user:
 
 * You probably read the article title
-* You can glance at the URL bar to get 
+* You can glance at the URL bar to get
 
-<Playground client:load html={`<table>
-    <caption>Assignments</caption>
-    <tbody>
-        <tr>
-            <th scope="row">Learning Algebra - Chp. 3
-            </th>
-            <td>
-                <button>Grade</button>
-                <button>Remind</button>
-            </td>
-        </tr>
-        <tr>
-            <th scope="row">World History - Chp. 12
-            </th>
-            <td>
-                <button>Grade</button>
-                <button>Remind</button>
-            </td>
-        </tr>
-    </tbody>
-</table>
-<h1>Pending assignments</h1>
-<ol>
-    <li>
-        All Creatures Great and Small - book report
-        <button>Publish</button>
-        <button>Edit</button>
-        <button>Delete</button>
-    </li>
-    <li>
-        Another report
-        <button>Publish</button>
-        <button>Edit</button>
-        <button>Delete</button>
-    </li>
-</ol>`} />
+<Playground client:load html={`<h2>Global settings</h2>
+<label><input type="checkbox" checked /> Share my activity status publicly </label><br />
+<label><input type="checkbox" checked /> Start on login </label><br />
+<label><input type="checkbox" /> Hide automatically</label><br />
+
+<h2>Download settings</h2>
+<label><input type="checkbox" checked /> Fetch downloads automatically</label><br />
+<label><input type="checkbox" /> Auto-resume downloads on restart</label><br />
+<label><input type="checkbox" /> Validate downloads before opening</label><br />`} />
